<resources>
    <string name="app_name">Bill Please</string>
    <string name="txt1">Amount</string>
    <string name="txt2">Num of Pax</string>
    <string name="txt3">Discount(%)</string>
    <string name="option1">Cash</string>
    <string name="option2">PayNow</string>
    <string name="Btn1">Split</string>
    <string name="Btn2">Reset</string>
    <string name="display1"></string>
    <string name="display2"></string>

</resources>